[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.12

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M The Forgotten Server.exe
	  data/
	M	global.lua
	M	actions/scripts/other/changegold.lua
	M	items/items.xml
	M	XML/outfits.xml
]

[ Milestone
	Fixed a bug with Lua function getPlayersByIP, it was ignoring mask even if set.
	Corrected the color of the healing numbers.
	Corrected the new outfit looktypes.
]