@@ -32,7 +32,6 @@
 	whiteSkullTime = 15 * 60 * 1000
 	oldConditionAccuracy = "no"
 	stairJumpExhaustion = 2000
-	animationTextOnHeal = "yes"
 
 	-- Commands
 	displayGamemastersWithOnlineCommand = "no"
