@@ -63,7 +63,6 @@ class ConfigManager
 			OLD_CONDITION_ACCURACY,
 			BROADCAST_BANISHMENTS,
 			FREE_MEMORY_AT_SHUTDOWN,
-			ANIMATION_TEXT_ON_HEAL,
 			ALLOW_CLONES,
 			BIND_ONLY_GLOBAL_ADDRESS,
 			LAST_BOOLEAN_CONFIG /* this must be the last one */
