@@ -26,7 +26,7 @@
 	<outfit type="0" looktype="329" enabled="1" name="Wife" premium="1"/>
 	<outfit type="0" looktype="336" enabled="1" name="Warmaster" premium="1"/>
 	<outfit type="0" looktype="366" enabled="1" name="Wayfarer" premium="1"/>
-	<outfit type="0" looktype="431" enabled="1" name="Afflicated" premium="1"/>
+	<outfit type="0" looktype="431" enabled="1" name="Afflicted" premium="1"/>
 	<outfit type="0" looktype="433" enabled="1" name="Elementalist" premium="1"/>
 
 	<!-- Male outfits -->
@@ -55,7 +55,7 @@
 	<outfit type="1" looktype="328" enabled="1" name="Husband" premium="1"/>
 	<outfit type="1" looktype="335" enabled="1" name="Warmaster" premium="1"/>
 	<outfit type="1" looktype="367" enabled="1" name="Wayfarer" premium="1"/>
-	<outfit type="1" looktype="430" enabled="1" name="Afflicated" premium="1"/>
+	<outfit type="1" looktype="430" enabled="1" name="Afflicted" premium="1"/>
 	<outfit type="1" looktype="432" enabled="1" name="Elementalist" premium="1"/>
 
 	<!-- Archdemon -->
