@@ -80,7 +80,7 @@ class Weapon : public Event
 
 		uint16_t getID() const {return id;}
 		virtual int32_t getWeaponDamage(const Player* player, const Creature* target, const Item* item, bool maxDamage = false) const = 0;
-		virtual int32_t getElementDamage(const Player* player, const Creature* target) const {return 0;}
+		virtual int32_t getElementDamage() const {return 0;}
 
 		uint32_t getReqLevel() const {return level;}
 		int32_t getReqMagLv() const {return magLevel;}
@@ -131,7 +131,7 @@ class WeaponMelee : public Weapon
 
 		virtual bool useWeapon(Player* player, Item* item, Creature* target) const;
 		virtual int32_t getWeaponDamage(const Player* player, const Creature* target, const Item* item, bool maxDamage = false) const;
-		virtual int32_t getElementDamage(const Player* player, const Item* item) const;
+		virtual int32_t getElementDamage() const;
 
 	protected:
 		virtual void onUsedWeapon(Player* player, Item* item, Tile* destTile) const;
